cicd/tdp205/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: lli453/backend:latest
        ports:
        - containerPort: 3000
        command: [ "node" ]
        args: [ "dist/main.js" ]
